--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="CURRENT">Active</string>
     <string name="COMPLETED">Completed</string>
     <string name="INACTIVE">Historical</string>
+    <string name="email"><![CDATA[lerane@rocketmail.com]></string>
+    <string name="password"><![CDATA[Pa55word1984]></string>
     <string name="provider"><![CDATA[https://www.coursera.org/]]></string>
     <string name="api_login"><![CDATA[api/login/v3Ssr?csrf3-token=]]></string>
     <string name="api_showme"><![CDATA[api/memberships.v1?q=me&limit=1]]></string>
